<resources>
    <string name="app_name">Your Bank</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">User Email</string>
    <string name="admin_login">User Login</string>
    <string name="image">Its an Image</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one!</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="userInformation">User Information</string>
    <string name="userName">User Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="nav_open">Open Navigation</string>
    <string name="nav_close">Close Navigation</string>
    <string name="logout">Logout</string>
    <string name="app_motto">Your Trusted Financial Partner</string>
    <string name="app_logo_desc">Banking App Logo</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="aboutUs">Your Bank is a modern and secure digital banking platform that ensures seamless and safe financial transactions. With innovative banking solutions, we help you manage your finances efficiently anytime, anywhere.</string>
    <string name="bank_mission">🔹 Our Mission\nTo provide secure, user-friendly, and innovative banking solutions that empower individuals and businesses to manage their finances with confidence.</string>
    <string name="bank_vision">🔹 Our Vision\nTo become the leading digital banking platform, ensuring financial accessibility and security for everyone.</string>
    <string name="bank_assurance">🔹 Security First\nYour Bank follows the highest security standards with end-to-end encryption, ensuring your financial data is safe and protected at all times.</string>
    <string name="contactUs">📞 Contact Us\nEmail: support@yourbank.com\nPhone: +123 456 7890</string>
    <string name="thanks">Thank You for Visiting\nwith warm regards,\n Your Bank Team</string>
    <string name="send_message">Send Message</string>
    <string name="contact_address">📍Address</string>
    <string name="contactAddress">Your Bank, 123 Financial Street,\nDist - Jabalpur, Madhya Pradesh</string>
    <string name="contact_email">📩 Email</string>
    <string name="contactEmail">support@yourbank.com</string>
    <string name="contact_phone">📞 Phone</string>
    <string name="contactPhone">+91 7620824421</string>
    <string name="follow_us">🔗 Follow Us</string>
    <string name="type_your_message">Type your message…</string>
    <string name="user_tiger">Tiger Das</string>
    <string name="user_email">tiger@yahu.in</string>
    <string name="profile_address">123 Main Street, Jabalpur, India</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="total_account">Number of Accounts</string>
    <string name="online_banking_status">Online Banking Status</string>
    <string name="active">Active</string>
    <string name="savings_current">Savings, Current</string>
    <string name="transaction_history">Transaction History</string>
    <string name="rupees">********</string>
    <string name="deposit">Deposit</string>
    <string name="date">25 Mar 2025</string>
    <string name="success">Success</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="transfer">Transfer</string>
    <string name="hello_tiger">Hello tiger</string>
    <string name="accountType">SAVINGS</string>
    <string name="account_number">Account Number</string>
    <string name="account_digit">************5065</string>
    <string name="account_type">Account Type</string>
    <string name="account_balance">Account Balance</string>
    <string name="logout_alert">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="withdraw">Withdraw</string>
    <string name="update_user">Update User</string>
    <string name="update">Update</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="amount">Amount</string>
    <string name="from_account">From Account Number</string>
    <string name="from_account_type">From Account Type</string>
    <string name="to_account_number">To Account Number</string>
    <string name="create_account">Create Account</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="savings_account">Savings</string>
    <string name="current_account">Current</string>
    <string name="fixed_deposit">Fixed_Deposit</string>
    <string name="account_services">Account Services (Savings, Current, Fixed Deposit)</string>
    <string name="banking_services">Banking Services</string>
    <string name="view_notifications">View Notifications</string>
    <string name="create_bank_account">Create Your Bank Account</string>
    <string name="account_service_deposit">Account Service (Deposit Money)</string>
    <string name="account_service_withdraw">Account Service (Withdraw Money)</string>
    <string name="account_service_transfer">Account Service (transfer Money)</string>
    <string name="update_service">Update Service (Update Your User Profile)</string>
    <string name="Notification_service">Notification Service (View Your Notifications)</string>
    <string name="deposit_money_account">Deposit Money to Your Account</string>
    <string name="withdraw_money_account">Withdraw Money From Your Account</string>
    <string name="transfer_money_account">Transfer Money From Your Account</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="view_your_notification">View Your Notifications</string>
    <string name="recover_password">Recover Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="select_default_account">Select Default account</string>
    <string name="fixed">Fixed Deposit</string>
    <string name="set_account">Set Default Account</string>
    <string name="flashlight">Flashlight</string>
    <string name="qr_scanner">Qr Scanner(QR Pay)</string>
    <string name="scan_and_pay">Scan QR code and Pay</string>
    <string name="scan_qr_code">Scan QR code</string>
</resources>